--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <!-- Section 1: Hero / VSL -->
         <section id="hero" class="text-center py-16 md:py-24">
-            <img src="logo-ac.png" alt="Logo Axiologia do Conteúdo" class="w-24 h-24 mx-auto mb-8" onerror="this.onerror=null;this.src='https://placehold.co/96x96/000000/e5e5e5?text=Logo';">
+            <img src="Logo-ac.png" alt="Logo Axiologia do Conteúdo" class="w-24 h-24 mx-auto mb-8" onerror="this.onerror=null;this.src='https://placehold.co/96x96/000000/e5e5e5?text=Logo';">
             <h1 class="text-4xl md:text-6xl font-black tracking-tighter mb-4">
                 O sistema que decodifica <span class="gradient-text">seus valores</span> em <span class="gradient-text">conteúdo magnético</span>.
             </h1>
