--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section id="hero" class="text-center py-16 md:py-24">
             <img src="Logo-ac.png" alt="Logo Axiologia do Conteúdo" class="w-40 h-40 mx-auto mb-8">
             <h1 class="text-4xl md:text-6xl font-black tracking-tighter mb-4">
-                O sistema que decodifica <span class="gradient-text">seus valores</span> em conteúdo <span class="neon-red-text">magnético</span>.
+                O sistema que decodifica <span class="gradient-text">seus valores</span> em conteúdo <span class="red-text">magnético</span>.
             </h1>
             <p class="text-lg md:text-xl text-neutral-300 max-w-2xl mx-auto mb-10">
                 Você não precisa de um novo modelo. Precisa da <strong class="text-white">coragem</strong> para transmitir o que ninguém mais transmite.
