--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         
         <!-- Section 4: The Solution -->
         <section id="solucao" class="py-16 md:py-24 text-center fade-in-section">
-            <h2 class="text-4xl md:text-5xl font-black tracking-tighter">O Corte: Uma Abordagem Diferente</h2>
+            <h2 class="text-4xl md:text-5xl font-black tracking-tighter">Uma Abordagem Diferente</h2>
             <p class="text-xl text-neutral-300 max-w-3xl mx-auto mt-6">Axiologia do Conteúdo™ <strong class="text-white">não é um curso. É uma ruptura.</strong> Um método híbrido que começa no eixo interno — valores, propósito, visão — e termina no mundo externo com conteúdo que posiciona, provoca e vende.</p>
             <p class="text-xl text-neutral-300 max-w-3xl mx-auto mt-6">Não é sobre viralizar. É sobre liderar. Não é sobre seguir fórmulas. É sobre criar as suas próprias. Por que funciona? Porque usa a abordagem aristotélica de 2.400 anos que formou todos os grandes líderes da história, aplicada ao mundo digital:</p>
             <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-8 max-w-4xl mx-auto">
@@ -187,7 +187,7 @@
         <!-- Bonus Stack Section -->
         <section id="bonus" class="py-16 md:py-24 fade-in-section">
             <div class="text-center mb-12">
-                <h2 class="text-4xl md:text-5xl font-black tracking-tighter">Pacote de Bônus <span class="gradient-text">Implementação Rápida</span></h2>
+                <h2 class="text-4xl md:text-5xl font-black neon-red-text">Pacote de Bônus <span class="gradient-text">Implementação Rápida</span></h2>
                 <p class="text-lg text-neutral-400 mt-4">Você não sai apenas com o método. Sai com um arsenal de execução para gerar resultados imediatos.</p>
             </div>
             <div class="max-w-2xl mx-auto space-y-6">
