--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <!-- Bonus Stack Section -->
         <section id="bonus" class="py-16 md:py-24 fade-in-section">
             <div class="text-center mb-12">
-                <h2 class="text-4xl md:text-5xl font-black neon-red-text">Pacote de Bônus <span class="gradient-text">Implementação Rápida</span></h2>
+                <h2 class="text-4xl md:text-5xl font-black neon-red-text">Pacote de Bônus <span class="font-bold text-lg text-white">Implementação Rápida</span></h2>
                 <p class="text-lg text-neutral-400 mt-4">Você não sai apenas com o método. Sai com um arsenal de execução para gerar resultados imediatos.</p>
             </div>
             <div class="max-w-2xl mx-auto space-y-6">
