--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
         <!-- Bonus Stack Section -->
         <section id="bonus" class="py-16 md:py-24 fade-in-section">
             <div class="text-center mb-12">
-                <h2 class="text-4xl md:text-5xl font-black neon-red-text">Pacote de Bônus <span class="font-bold text-lg text-white">Implementação Rápida</span></h2>
-                <p class="text-lg text-neutral-400 mt-4">Você não sai apenas com o método. Sai com um arsenal de execução para gerar resultados imediatos.</p>
+                <h2 class="text-4xl md:text-5xl font-black tracking-tighter">Pacote de Bônus Implementação Rápida</h2>
+                <p class="text-lg text-neutral-400 mt-4">Você não sai apenas com o método. <b> Sai com um arsenal de execução para gerar resultados imediatos.</b></p>
             </div>
             <div class="max-w-2xl mx-auto space-y-6">
                 <!-- Bonus 1 -->
